fix wise_to_give_up calculation bug; fix company field purchase bug; improve bankrupt logic